collect(Collectors.toList()) -> toList()
Signed-off-by: Jimmy Tanagra <jcode@tanagra.id.au>